fix(frontend): hide weeks chips on mobile

--- a/packages/frontend/src/components/campaign-details/kpi/distribution-chart/styles.module.css
+++ b/packages/frontend/src/components/campaign-details/kpi/distribution-chart/styles.module.css
@@ -16,7 +16,7 @@
 }
 
 .rightContent {
-    @apply flex gap-1;
+    @apply hidden md:flex gap-1;
 }
 
 .skeletonChip :global(.skeleton) {
